# pay-service

./: .bzrignore  CMakeLists.txt  HACKING  MERGE-REVIEW  README  package.cpp  package.h  pay-test-app.cpp  pay-test-app.desktop  pay-test-app.desktop.in  pay-test-app.qml
common/: CMakeLists.txt  bus-utils.cpp  bus-utils.h  glib-thread.cpp  glib-thread.h
data/: CMakeLists.txt  com.canonical.pay.application.xml  com.canonical.pay.item.xml  com.canonical.pay.package.xml  com.canonical.pay.payui.xml  com.canonical.pay.store.xml  com.canonical.pay.xml  com.canonical.payments.service.in  pay-service-trust-stored.conf  pay-service.conf.in  ubuntu-pay-service-trust-stored.conf
debian/: changelog  control  copyright  libpay1-dev.install  libpay1-headers.install  rules  (+8 more)
libpay/: CMakeLists.txt  libpay.map  pay-item.cpp  pay-item.h  pay-package.cpp  pay-package.h  pay-types.h  pay.pc.in
libpay/internal/: CMakeLists.txt  item.cpp  item.h  package.cpp  package.h
pay-test-app/: CMakeLists.txt  package.cpp  package.h  pay-test-app.cpp  pay-test-app.desktop.in  pay-test-app.qml
pay-ui/: CMakeLists.txt  HACKING  pay-ui.in
pay-ui/app/: CMakeLists.txt  payui.qml
pay-ui/app/components/: AlertDialog.qml  BeforeUnloadDialog.qml  CMakeLists.txt  ConfirmDialog.qml  ModalDialog.qml  PromptDialog.qml  SecurityCertificatePopover.qml
pay-ui/app/tests/unit/: tst_checkoutpage.qml  tst_purchasewebkit.qml
pay-ui/app/tests/unit/js/: unit_test.js
pay-ui/app/ui/: CMakeLists.txt  CheckoutPage.qml  ErrorDialog.qml  UbuntuPurchaseWebkit.qml
pay-ui/backend/: CMakeLists.txt
pay-ui/backend/modules/payui/: backend.cpp  backend.h  certificateadapter.cpp  certificateadapter.h  credentials_service.cpp  credentials_service.h  network.cpp  network.h  oxideconstants.cpp  oxideconstants.h  pay_info.cpp  pay_info.h  purchase.cpp  purchase.h  qmldir
pay-ui/backend/tests/: CMakeLists.txt  mock_click_server.py  test_network.cpp
pay-ui/debian/: changelog  control  copyright  rules
pay-ui/debian/tests/: control
pay-ui/tests/autopilot/: run_autopilot
pay-ui/tests/autopilot/pay_ui/: __init__.py
pay-ui/tests/autopilot/pay_ui/tests/: __init__.py  mock_server.py  test_pay_ui.py
service/: CMakeLists.txt  click-purchases-api.cpp  click-purchases-api.h  dbus-interface.cpp  dbus-interface.h  dbus-interface.hpp  exec-tool.c  glib-thread.h  item-interface.h  item-interface.hpp  item-memory.cpp  item-memory.h  item-memory.hpp  item-null.h  item-null.hpp  main.cpp  mir-connection-demangler.c  purchase-factory.h  purchase-null.cpp  purchase-null.h  purchase-ual.cpp  purchase-ual.h  qtbridge.cpp  qtbridge.h  refund-factory.h  refund-http.cpp  refund-http.h  refund-null.cpp  token-grabber-u1.cpp  token-grabber-u1.h  token-grabber.h  verification-curl.cpp  verification-curl.h  verification-curl.hpp  verification-factory.h  verification-factory.hpp  verification-http.cpp  verification-http.h  verification-null.cpp  verification-null.h  (+6 more)
service-ng/: CMakeLists.txt  test-service.sh
service-ng/src/: update-externals.sh  vendor.cfg
service-ng/src/github.com/godbus/dbus/: export.go
service-ng/src/launchpad.net/go-apparmor/: README
service-ng/src/launchpad.net/go-apparmor/apparmor/: getcon.go
service-ng/src/launchpad.net/go-mir/: README
service-ng/src/launchpad.net/go-mir/mir/: connection.go  mir_prompt_session_helper.c  mir_prompt_session_helper.h  prompt_session.go
service-ng/src/launchpad.net/go-mir/mir/fakes/: connection.go  prompt_session.go
service-ng/src/launchpad.net/go-trust-store/: README
service-ng/src/launchpad.net/go-trust-store/trust/: agent.go  answer.go  answer_shim.h  answer_test.go  doc.go  request.go  request_parameters.go  request_parameters_shim.h  request_parameters_test.go  request_shim.h  request_test.go  test_answer.go  test_request.go  test_request_parameters.go
service-ng/src/launchpad.net/go-trust-store/trust/dbus/: agent.cpp  agent.go  agent.h  agent_shim.cpp  agent_shim.h  agent_test.go  doc.go
service-ng/src/launchpad.net/go-trust-store/trust/fakes/: agent.go
service-ng/src/launchpad.net/go-ual/: README
service-ng/src/launchpad.net/go-ual/ual/: gateway_observers.c  gateway_observers.h  helper_observer_callers.go  helper_observers.go  helper_observers_test.go  observers_collection.go  observers_collection_test.go  ubuntu_app_launch.go
service-ng/src/pay-service-2/: main.go
service-ng/src/pay-service-2/service/: auth_iface.go  currency.cpp  currency.go  currency.h  currency_test.go  dbus_server.go  dbus_server_test.go  dbus_wrapper.go  fake_dbus_server_test.go  fake_timer.go  fake_webclient.go  pay_service.go  pay_service_test.go  pay_ui.go  pay_ui_test.go  pidof.go  pidof_test.go  service.go  service_test.go  timer_iface.go  ubuntuoneauth.go  webclient.go  webclient_iface.go
tests/: CMakeLists.txt  com_canonical_pay_store.py  dbus-fixture.h  dbus-interface-tests.cpp  item-memory-tests.cpp  item-test.h  libpay-iap-tests.cpp  libpay-package-tests.cpp  libpay-tests.cpp  manual  mir-mock.cpp  purchase-test.h  purchase-ual-tests.cpp  refund-http-tests.cpp  refund-test.h  setup-staging.sh  test_data.h.in  token-grabber-null.h  verification-curl-tests.cpp  verification-http-tests.cpp  verification-test.h  verification-test.hpp  webclient-curl-tests.cpp
tests/click-data/.click/users/test-user/: com.canonical.payui
tests/click-data/com.canonical.payui/0.1/: test.desktop
tests/click-data/com.canonical.payui/0.1/.click/info/: com.canonical.payui.manifest
tests/click-db/: test.conf.in
tests/click-hook-data/: payuihelper.desktop
tests/libpay/: CMakeLists.txt  com_canonical_pay_store.py  libpay-iap-tests.cpp  libpay-item-tests.cpp  libpay-package-tests.cpp  mock-package-service.h  store.py
tests/verification-curl-endpoints/good/: device-id.in  simple.in
tests/verification-http-endpoints/: package-name.in
ual-helper/: CMakeLists.txt  exec-tool.c  item-interface.h  item-null.h  purchase-factory.h  purchase-null.cpp  purchase-null.h  qtbridge.cpp  refund-http.h  refund-null.cpp  refund-null.h  token-grabber-u1.cpp  verification-null.h  webclient-null.cpp
(+49 files in other folders)
